docs/examples/errors/error_handlers/src/bearer_token/route.rs
use super::BearerToken;
use pavex::Response;

#[pavex::post(path = "/bearer")]
pub fn auth(token: &BearerToken) -> Response {
    todo!()
}
